docker: terminal text tweaks in startapp.sh, add commented variable for IP_ADDR